@@ -1,6 +1,7 @@
+1954 [Audio Encoder] fixed audio detection crash
 1953 [Job] enhanced message in case a job is already aborted
 1952 [FFMSIndexer] enhanced progress window in case that the index file already exists
-1951 [MKV Muxer] problem with chapter information in audio files fixed
+1951 [MKV Muxer] fixed problem with chapter information in audio files
 1950 [One-Click] a new job will be added after the indexing job to show the progress of the preprocessing
 1949 [Audio Encoder] if AAC is detected FFAudioSource() will be used
      [Audio Encoder] downmix will be ignored if there are not more than 2 audio channels
